@@ -439,13 +439,13 @@ Deseja salvar as alterações??</translation>
 <context>
     <name>qjackctlGraphCanvas</name>
     <message>
-        <location filename="../qjackctlGraph.cpp" line="1503"/>
-        <location filename="../qjackctlGraph.cpp" line="1628"/>
+        <location filename="../qjackctlGraph.cpp" line="1552"/>
+        <location filename="../qjackctlGraph.cpp" line="1677"/>
         <source>Connect</source>
         <translation>Conectar</translation>
     </message>
     <message>
-        <location filename="../qjackctlGraph.cpp" line="1664"/>
+        <location filename="../qjackctlGraph.cpp" line="1713"/>
         <source>Disconnect</source>
         <translation>Disconectar</translation>
     </message>
