@@ -4,6 +4,11 @@ QjackCtl - JACK Audio Connection Kit Qt GUI Interface
 ChangeLog
 
 
+GIT HEAD
+
+- Graph port/connections highlighting. (EXPERIMENTAL)
+
+
 0.5.4  2018-09-24  An Early Autumn'18 Release.
 
 - Graph port-type colors are now configurable (cf. menu
